# ChangeLog for net-misc/batctl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/batctl/ChangeLog,v 1.7 2012/06/13 22:24:20 xmw Exp $

*batctl-2012.2.0 (13 Jun 2012)

  13 Jun 2012; Michael Weber <xmw@gentoo.org> +batctl-2012.2.0.ebuild:
  Version bump (bug 421013 by Antonio Quartulli)

*batctl-2012.1.0 (17 Apr 2012)

  17 Apr 2012; Michael Weber <xmw@gentoo.org> -batctl-2011.1.0.ebuild,
  -batctl-2011.3.0.ebuild, +batctl-2012.1.0.ebuild:
  Remove old versions, version bump (thanks Franz Schrober, bug 412143)

*batctl-2011.4.0 (15 Nov 2011)

  15 Nov 2011; Michael Weber <xmw@gentoo.org> +batctl-2011.4.0.ebuild:
  Version bump (thanks Franz Schrober, bug 390539)

  15 Nov 2011; Michael Weber <xmw@gentoo.org> batctl-2011.3.0.ebuild:
  Fix installation (Makefile changes), EAPI-4 (thanks Franz Schrober, bug
  390619)

*batctl-2011.3.0 (13 Nov 2011)

  13 Nov 2011; Michael Weber <xmw@gentoo.org> +batctl-2011.3.0.ebuild:
  Version bump (thanks to Franz Schrober for the report, bug 381665)

  22 May 2011; Michael Weber <xmw@gentoo.org> batctl-2011.1.0.ebuild:
  Improved sed expression and src_compile, thanks to Emil Langrock (bug 368213)

*batctl-2011.1.0 (20 May 2011)

  20 May 2011; Michael Weber <xmw@gentoo.org> +batctl-2011.1.0.ebuild,
  +metadata.xml:
  Initial import, thanks to Emil Langrock for the report (bug 368213) and s3d
  for the initial ebuild.
