@@ -1,18 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST batctl-2011.4.0.tar.gz 45564 RMD160 e1dcbc72ecc10c8b53d67913c1e231eee86d8ca0 SHA1 b7019a8258c5e9886fc18680c22a5cdb4f0a85fe SHA256 99980ce88328db7e46e5af0cfd43df23f5027a052bd89aaee64895a21c8388ec
-DIST batctl-2012.1.0.tar.gz 45757 RMD160 0a95367decfd9a5adedc89f1ffcdbca23dc7e68d SHA1 90074bad59b711a1d4560df29150ccf7916fe49e SHA256 eef06b9348fbc21b12a84bd8cb7dfa709ebef6f7c5e7e5c424c8063767c3bc8e
-DIST batctl-2012.2.0.tar.gz 46236 RMD160 603a2a9f99bb5885034a0b96704c37225db939a4 SHA1 703d7d1d1bb76c6873b4ec47a1a14749a8bc7b9a SHA256 bf9ab02f980d0bb668aa8bd96842d394034489d217272be2490944e78c2db2d3
-EBUILD batctl-2011.4.0.ebuild 925 RMD160 bc6d3f66dfd79943cff10e4fe5d079eaa19049e8 SHA1 b97e639e6f05e36667a982fad879b4a9fd9dc26c SHA256 b6b806985387a7576fabadc3e1fcf32d8aa743781fab8784cf10fce2ccf12992
-EBUILD batctl-2012.1.0.ebuild 925 RMD160 516fffe4cc8e43c464f699181a72c45abf39bfed SHA1 f1d419f0ea3660b4fec13c8e52264981ffa47878 SHA256 9c0f758e97ea85da2a31d653d9611d0a7e61198e5be281ab7a6afd78fb244dc9
-EBUILD batctl-2012.2.0.ebuild 925 RMD160 b92f4cfb252e95bd41d9c3a3ea855e5d79ece4c1 SHA1 2b5e3ad55be784f4dc8511db8e20a556fe12bc6c SHA256 3ab89ab5f64a3f323eb18a4bc5c1dd69830fdc2946ca2c62e6d75546a2f96072
-MISC ChangeLog 1440 RMD160 70e3430203b2f14c57b150cddab23ff1f0512b57 SHA1 0de6efced422d2e3557c6c1615e5aaf7de0940a5 SHA256 a758e1573624e609f7cbb024a32ea83702fa1965e00188711e5306759d914ca4
-MISC metadata.xml 224 RMD160 2a7e22a99ec669c5b961c3d1738a0cda58264318 SHA1 f6fd81fac4df7d7995b1600848b265fceda692f8 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7
+DIST batctl-2011.4.0.tar.gz 45564 SHA256 99980ce88328db7e46e5af0cfd43df23f5027a052bd89aaee64895a21c8388ec
+DIST batctl-2012.1.0.tar.gz 45757 SHA256 eef06b9348fbc21b12a84bd8cb7dfa709ebef6f7c5e7e5c424c8063767c3bc8e SHA512 9085c38821ba7ac570929a27d9ecd05db5483128b4e39e9f494052720cf5c59521d1428d0529378a9cf958ea9b0b759a399a9c45d1bb190da6a9b111e94fc6c4 WHIRLPOOL 00d1a0f4c98a9ef33968ffe3c75eb8bdcd680e2e103a5fe42057a24edcb7bfddf730758f1491626d8c3f8866e8af8009318f3aa0188407c1393dabb542feefd8
+DIST batctl-2012.2.0.tar.gz 46236 SHA256 bf9ab02f980d0bb668aa8bd96842d394034489d217272be2490944e78c2db2d3 SHA512 eb991f80ee501c7b97beafeee4102cdc279b630bb64cb7d4cd57466b9b5f65120a85660a6ad09ad517ad94b246ed8a3ed72096e43b666a4c871532f7e5783422 WHIRLPOOL b082b9e6df385e5c1d19cc985ee9ebeac286112a0ec5b46e635452a32d43b07bd28445797ea8558edde67c0985ebdc01f82af3a895fad9ba8c20d9c595b881e0
+DIST batctl-2012.3.0.tar.gz 49039 SHA256 f718d79e6287a0572f9b5bb65cf132eee8e86a6aaafc2bf850805efff3df6353 SHA512 c584568fb9198644772e40c51fea7905bc5314ca3c403c71a78db56031b64a00395ae05402ccca137582fb1d4122dcaa1f6c4a5b6bcab34cbf2532fa983d6dcd WHIRLPOOL f36fcaabc8933348fa9b9af86958315ea6a0b97d4af26a6d749831989cbdc16d2f0bdb9e85669b4ee5ce7e950cf13377d4cfb7d7f3fcbc0acb52e1094ea4a746
+EBUILD batctl-2011.4.0.ebuild 925 SHA256 b6b806985387a7576fabadc3e1fcf32d8aa743781fab8784cf10fce2ccf12992 SHA512 36618319c746c1b964dcba29767d8e67a0bb25a26fcc9c878aee9837b02e41420423459ce0dad4feb1bd443654b3e3f4c32357262222bb8e71a98cd850b8678f WHIRLPOOL 0d2c9feef574e92c96010df993ced66e4eda0bb31da940798723b2d56be034312ce9cff8f4088962dd6c418e627a83bb47f88c3a91620b875bb5e2a1e66a672f
+EBUILD batctl-2012.1.0.ebuild 925 SHA256 9c0f758e97ea85da2a31d653d9611d0a7e61198e5be281ab7a6afd78fb244dc9 SHA512 1def22463537733ee6bed850b433a63092fe6796939fbd0f16a7104d34ed7a4f5b5040e1e277880f74cd1fd76c09bdfdb40cb6bca83ffb8eb5313c4a79faf0e8 WHIRLPOOL 0a72750a13079c99f7be7e37ae9dee50e4b3e5e508739c085eb660f6c36c9dab2a08be5fb6ec3eb17934bfd16d16cb179fc3a0bb85614814aeb1d4fb6cb199f7
+EBUILD batctl-2012.2.0.ebuild 925 SHA256 3ab89ab5f64a3f323eb18a4bc5c1dd69830fdc2946ca2c62e6d75546a2f96072 SHA512 40ad44fdd9226abc66a3fd3ef77ec3f1efc30dff9131b57e67deb04f565dfd8df9b8ab42b64ae09d1e6d5bc666d5009cb002105c20f064d0ea9aabb2f0b577ff WHIRLPOOL 7c7c3252565dc4744d7ee1e8c133578700baebdb7665372e9eceac9e8b8f0727bed935d6601fd8fbf8ba77e81203bf8fa5e00e0e7d903bf1bfa853cb80160f9d
+EBUILD batctl-2012.3.0.ebuild 925 SHA256 fba22fcf075aff1855df5fc079886011d46f0508cd20e1eec769f336e843e505 SHA512 8464fe4c59e6ca88dcdb84325a5af38f180ffe653e81a030fec65d26cdf4095d550751b7a159ab91bba5f427f94cdbb7229f2c9db6fbb79ee6d8a5d53a538e49 WHIRLPOOL 95120d661207b490fa1776a103046e04a46b0f2513f7c2d8301e0de73ecd7ba8b5c6ca5023455c74e0caf7596a997e98acff3a67c74dfb4d6d4811ba51401182
+MISC ChangeLog 1572 SHA256 187337475408eb192a1683924b9e2df10ace47acb55ed83ea6e2872633269719 SHA512 7ad8ce17c4e5c443a141fa3ff2c444a4a72b8f2096ec1297bb8a275bc84febf793019a12b31274ddf9b6b3c7a6f3334b7b1cd15f19d3ca18635f5d18b078c8e2 WHIRLPOOL 7802594ef5c60995d48e32dc87479b9fe4688e345a43cc893f1cc7d3374e9d197dc4b41e61909582067025d1a3b0bd4e65ee92e29e39993db1457dc0cf40b788
+MISC metadata.xml 224 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7 SHA512 4f78d959809ec0db2f9be2a7747d572fa8ee03d177044dd46574881a6ee83736510b76062c12daecae609282d197ba466e8a3e3a654b1383e04c659acd41bef5 WHIRLPOOL 0300a228d371c918b051bc24859dfe4e5d0d2a71b80f697f202749c5aca69efcee4be6e69454c9abfa4ced28e19a9d1f71d6d7eaf54290b8d03b5c04fd209868
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk/ZEvQACgkQknrdDGLu8JAbcgEAjY6HuDLz2hAistn7OqgdnkAK
-lwqqeVdGXgAAaIs6e+0A/1oqwHC89+i7UQp7XVwlkwe1sYa6VowZzAOLy4v6Z1bQ
-=8mc0
+iF4EAREIAAYFAlAxdrcACgkQknrdDGLu8JBOOQD/cUnJiWe1q1zr/BfWFfLhEQKo
+uUwRkMEpDWV2REPmy/IA/iddHV8duDEE+NraInJnINUtV/IUzFwhY/6wVnHcMYQM
+=dvIs
 -----END PGP SIGNATURE-----
