@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/batctl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/batctl/ChangeLog,v 1.7 2012/06/13 22:24:20 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/batctl/ChangeLog,v 1.8 2012/08/19 23:28:47 xmw Exp $
+
+*batctl-2012.3.0 (19 Aug 2012)
+
+  19 Aug 2012; Michael Weber <xmw@gentoo.org> +batctl-2012.3.0.ebuild:
+  Version bump (bug 431996).
 
 *batctl-2012.2.0 (13 Jun 2012)
 
@@ -36,4 +41,3 @@
   +metadata.xml:
   Initial import, thanks to Emil Langrock for the report (bug 368213) and s3d
   for the initial ebuild.
-
